# pysalient

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  recipe.yaml  requirements.txt  turbodbc.md
.changes/: 0.0.1.md  0.1.0.md  v0.0.2.md  v0.0.3.md
.changes/unreleased/: Added-20250728-085612.yaml  Added-20250728-090834.yaml  Added-20250824-132849.yaml  Added-20250824-134105.yaml  Changed-20240426-060857.yaml  Changed-20250426-102244.yaml  Changed-20250426-102743.yaml  Changed-20250426-102826.yaml  Changed-20250531-201559.yaml  Changed-20250531-203534.yaml  Changed-20250601-102542.yaml  Changed-20250616-060726.yaml  Changed-20250618-063024.yaml  Changed-20250728-083002.yaml  Changed-20250728-084822.yaml  Changed-20250728-084828.yaml  Changed-20250824-132821.yaml  Changed-20251022-213928.yaml  Changed-20251022-215301.yaml  Deprecated-20250601-102533.yaml  Deprecated-20251022-213933.yaml  Removed-20250824-133939.yaml
.github/: ci.yml
.github/workflows/: README.md  cd.yml  ci.yml
docs/: Makefile
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst
docs/source/contributing/: guidelines.rst  setup.rst
examples/: test.ipynb  test.py
examples/data/: anonymised_sample.parquet
pysalient/: README.md  __init__.py
pysalient/evaluation/: README.md  __init__.py  _analytical_ci_utils.py  _bootstrap_utils.py  _bootstrap_utils_parallel.py  _evaluation_process.py  _evaluation_process_parallel.py  _evaluation_utils.py  evaluation.py  model_comparison.py
pysalient/events/: README.md
pysalient/experiments/: README.md
pysalient/io/: __init__.py  _io_core.py  _io_utils.py  io.py
pysalient/parser/: README.md
pysalient/reports/: README.md
pysalient/task/: README.md
pysalient/visualisation/: __init__.py  visualisation.py
scripts/: README.md  bump_version.sh
tests/: conftest.py  schemas.py  test_schemas_pandera.py
tests/adapters/: test_adapters.py
tests/config/: test_config.py
tests/datasets/: test_datasets.py
tests/evaluation/: test_analytical_ci_utils.py  test_bootstrap_utils.py  test_evaluation.py  test_evaluation_process.py  test_evaluation_time_to_event.py  test_evaluation_utils.py  test_model_comparison.py
tests/events/: test_events.py
tests/io/: test_io.py  test_io_core.py  test_io_utils.py
tests/parser/: test_parser.py
tests/project/: test_project.py
tests/reports/: test_reports.py
tests/task/: test_task.py
tests/test_data/: anonymised_sample.parquet
tests/visualisation/: test_visualisation.py
